# localdoc-intel

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  conftest.py  manage.py
backend/chat/: generation.py  models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/chat/tests/: test_api.py  test_generation.py
backend/config/: celery.py  resources.py  settings.py  urls.py
backend/documents/: admin.py  ingestion.py  models.py  ocr.py  serializers.py  status.py  tasks.py  urls.py  views.py
backend/documents/migrations/: 0001_initial.py  0002_document_metadata_source_path_unique_hash.py
backend/documents/tests/: test_api.py  test_demo_data.py  test_ingestion.py  (+1 more)
backend/evaluations/: harness.py  judging.py  models.py  serializers.py  urls.py  views.py
backend/retrieval/: services.py
cpp/chunker/: CMakeLists.txt  README.md
cpp/chunker/src/: main.cpp
cpp/chunker/tests/: sample_input.txt  validate_output.py
data/: demo_questions.json
docs/: api.md  architecture.md  evaluation.md  frontend_design.md  model_card.md  rag_design.md
examples/synthetic_intake/: sample.eml  sample.html  sample.rst  sample.rtf  sample.xml  sample.yaml
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/components/: citation-card.test.tsx  citation-card.tsx  empty-state.tsx  frontend-flows.test.tsx  system-status-card.tsx
frontend/lib/: api.test.ts  api.ts  format.ts
frontend/types/: api.ts
ml/query_router/: README.md
scripts/: benchmark_retrieval.py  ingest_folder.py  run_eval.py
tests/: README.md
(+29 files in other folders)
